variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: type int
var nbPas:int = 0
          ^Variables:8: error: not found: value ramasseBiscuit
ramasseBiscuit()
^Variables:10: error: not found: value deposeBiscuit
deposeBiscuit() 
^