variables.Variables.scala.code
var nbPas:int = 0

while (!estSurBiscuit()) {
  avance();
  nbPas = nbPas + 1;
}

ramasseBiscuit()
recule(nbPas)
deposeBiscuit()